# DjangoAppTakeHome

./: .gitignore  .pylintrc  Makefile  README.md  manage.py  mypy.ini  pyproject.toml  requirements.txt
.ebextensions/: deployment_extensions.config
accounts/: tests.py  views.py
assets/: admin.py  models.py  serializers.py  tests.py  views.py
assets/migrations/: 0001_initial.py  0002_auto_20191215_2119.py  0003_auto_20191216_0202.py  0004_auto_20191216_0229.py
formations/: DemoDeployment.yaml
helpers/: swagger.py
project/: urls.py  wsgi.py
project/settings/: base.py  local.py  production.py  testing.py
