[tool.poetry]
name = "khaleds-project-server-peter-emil"
version = "0.0.0"
description = "This is a project built by Peter Emil as part of the technical interview process"
authors = ["Peter Emil <pe.peteremil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
mysqlclient = "^1.4"
Pillow = "^6.2"
djangorestframework = "^3.11"
drf_yasg = "^1.17"
djangorestframework-simplejwt = "^4.3.0"
boto3 = "^1.10"
django-storages = "^1.8"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
flake8 = "^3.7"
django-stubs = "^1.2"
vulture = "^1.1"
mypy = "=0.730"
coverage = "^5.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
